--- a/portfolio/templates/portfolio/base.html
+++ b/portfolio/templates/portfolio/base.html
@@ -11,8 +11,7 @@
         rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous"> <!-- pragma: allowlist secret -->
   <link rel="stylesheet"
-        href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css"
-        integrity="sha384-c9MVh4yXsKHLyIoKUV+UmqGhQ3SBqHFPKJxYj3YKqZphZqKvmHvvnxsUoZKvdAqM" crossorigin="anonymous"> <!-- pragma: allowlist secret -->
+        href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
   {% load static %}
   <!-- Local CSS (Whitenoise adds cache-busting automatically) -->
