--- a/portfolio/templates/portfolio/holdings.html
+++ b/portfolio/templates/portfolio/holdings.html
@@ -118,7 +118,7 @@
                                             </td>
                                             <td>{{ row.security_name }}</td>
                                             <td>{{ row.asset_class }}</td>
-                                            <td class="text-end">{{ row.price|accounting_amount:2 }}</td>
+                                            <td class="text-end"><span class="money">{{ row.price|money:2 }}</span></td>
 
                                             <!-- Shares (Editable if account) -->
                                             <td class="text-end" style="min-width: 100px;">
@@ -128,21 +128,21 @@
                                                            step="0.0001" class="form-control form-control-sm p-1 text-end"
                                                            style="font-size: 0.8rem;">
                                                 {% else %}
-                                                    {{ row.shares|accounting_number:4 }}
+                                                    <span class="number">{{ row.shares|number:4 }}</span>
                                                 {% endif %}
                                             </td>
-                                            <td class="text-end">{{ row.target_shares|accounting_number:4 }}</td>
-                                            <td class="text-end">{{ row.shares_variance|accounting_number:4 }}</td>
+                                            <td class="text-end"><span class="number">{{ row.target_shares|number:4 }}</span></td>
+                                            <td class="text-end"><span class="number">{{ row.shares_variance|number:4 }}</span></td>
 
                                             <!-- Value -->
-                                            <td class="text-end">{{ row.value|accounting_amount:0 }}</td>
-                                            <td class="text-end">{{ row.target_value|accounting_amount:0 }}</td>
-                                            <td class="text-end">{{ row.value_variance|accounting_amount:0 }}</td>
+                                            <td class="text-end"><span class="money">{{ row.value|money:0 }}</span></td>
+                                            <td class="text-end"><span class="money">{{ row.target_value|money:0 }}</span></td>
+                                            <td class="text-end"><span class="money">{{ row.value_variance|money:0 }}</span></td>
 
                                             <!-- Allocation -->
-                                            <td class="text-end">{{ row.allocation|accounting_percent:1 }}</td>
-                                            <td class="text-end">{{ row.target_allocation|accounting_percent:1 }}</td>
-                                            <td class="text-end">{{ row.allocation_variance|accounting_percent:1 }}</td>
+                                            <td class="text-end"><span class="percent">{{ row.allocation|percent:1 }}</span></td>
+                                            <td class="text-end"><span class="percent">{{ row.target_allocation|percent:1 }}</span></td>
+                                            <td class="text-end"><span class="percent">{{ row.allocation_variance|percent:1 }}</span></td>
                                         </tr>
                                         {% elif row.is_subtotal %}
                                         <tr class="{{ row.row_class }}" id="{{ row.row_id }}">
@@ -152,14 +152,14 @@
                                             <td colspan="3"></td>
 
                                             <!-- Value Total -->
-                                            <td class="text-end">{{ row.value|accounting_amount:0 }}</td>
-                                            <td class="text-end">{{ row.target_value|accounting_amount:0 }}</td>
-                                            <td class="text-end">{{ row.value_variance|accounting_amount:0 }}</td>
+                                            <td class="text-end"><span class="money">{{ row.value|money:0 }}</span></td>
+                                            <td class="text-end"><span class="money">{{ row.target_value|money:0 }}</span></td>
+                                            <td class="text-end"><span class="money">{{ row.value_variance|money:0 }}</span></td>
 
                                             <!-- Allocation Total -->
-                                            <td class="text-end">{{ row.allocation|accounting_percent:1 }}</td>
-                                            <td class="text-end">{{ row.target_allocation|accounting_percent:1 }}</td>
-                                            <td class="text-end">{{ row.allocation_variance|accounting_percent:1 }}</td>
+                                            <td class="text-end"><span class="percent">{{ row.allocation|percent:1 }}</span></td>
+                                            <td class="text-end"><span class="percent">{{ row.target_allocation|percent:1 }}</span></td>
+                                            <td class="text-end"><span class="percent">{{ row.allocation_variance|percent:1 }}</span></td>
                                         </tr>
                                         {% elif row.is_group_total %}
                                         <tr class="{{ row.row_class }}" data-bs-toggle="collapse" data-bs-target=".{{ row.row_id }}-rows" aria-expanded="true" role="button">
@@ -170,14 +170,14 @@
                                             <td colspan="3"></td>
 
                                             <!-- Value Total -->
-                                            <td class="text-end">{{ row.value|accounting_amount:0 }}</td>
-                                            <td class="text-end">{{ row.target_value|accounting_amount:0 }}</td>
-                                            <td class="text-end">{{ row.value_variance|accounting_amount:0 }}</td>
+                                            <td class="text-end"><span class="money">{{ row.value|money:0 }}</span></td>
+                                            <td class="text-end"><span class="money">{{ row.target_value|money:0 }}</span></td>
+                                            <td class="text-end"><span class="money">{{ row.value_variance|money:0 }}</span></td>
 
                                             <!-- Allocation Total -->
-                                            <td class="text-end">{{ row.allocation|accounting_percent:1 }}</td>
-                                            <td class="text-end">{{ row.target_allocation|accounting_percent:1 }}</td>
-                                            <td class="text-end">{{ row.allocation_variance|accounting_percent:1 }}</td>
+                                            <td class="text-end"><span class="percent">{{ row.allocation|percent:1 }}</span></td>
+                                            <td class="text-end"><span class="percent">{{ row.target_allocation|percent:1 }}</span></td>
+                                            <td class="text-end"><span class="percent">{{ row.allocation_variance|percent:1 }}</span></td>
                                         </tr>
                                         {% elif row.is_grand_total %}
                                         <tr class="{{ row.row_class }}">
@@ -187,14 +187,14 @@
                                             <td colspan="3"></td>
 
                                             <!-- Value Total -->
-                                            <td class="text-end">{{ row.value|accounting_amount:0 }}</td>
-                                            <td class="text-end">{{ row.target_value|accounting_amount:0 }}</td>
-                                            <td class="text-end">{{ row.value_variance|accounting_amount:0 }}</td>
+                                            <td class="text-end"><span class="money">{{ row.value|money:0 }}</span></td>
+                                            <td class="text-end"><span class="money">{{ row.target_value|money:0 }}</span></td>
+                                            <td class="text-end"><span class="money">{{ row.value_variance|money:0 }}</span></td>
 
                                              <!-- Allocation Total -->
-                                            <td class="text-end">{{ row.allocation|accounting_percent:1 }}</td>
-                                            <td class="text-end">{{ row.target_allocation|accounting_percent:1 }}</td>
-                                            <td class="text-end">{{ row.allocation_variance|accounting_percent:1 }}</td>
+                                            <td class="text-end"><span class="percent">{{ row.allocation|percent:1 }}</span></td>
+                                            <td class="text-end"><span class="percent">{{ row.target_allocation|percent:1 }}</span></td>
+                                            <td class="text-end"><span class="percent">{{ row.allocation_variance|percent:1 }}</span></td>
                                         </tr>
                                         {% endif %}
                                     {% empty %}
