--- a/portfolio/templates/portfolio/sidebar.html
+++ b/portfolio/templates/portfolio/sidebar.html
@@ -42,7 +42,7 @@
                                     ${{ account.total|floatformat:0|intcomma }}
                                 </div>
                                 <div class="text-muted small" style="font-size: 0.75em;" title="Absolute Deviation vs Target">
-                                    drift: {{ account.absolute_deviation_pct|accounting_percent:1 }}
+                                    drift: {{ account.absolute_deviation_pct|percent:1 }}
                                 </div>
                             </div>
                         </li>
