feat(holdings): add navbar link, aggregated view logic, and tests

--- a/portfolio/templates/portfolio/base.html
+++ b/portfolio/templates/portfolio/base.html
@@ -37,6 +37,9 @@
             <a class="nav-link" href="{% url 'portfolio:dashboard' %}">Dashboard</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="{% url 'portfolio:holdings' %}">Holdings</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="{% url 'portfolio:target_allocations' %}">Allocations</a>
           </li>
         </ul>
