--- a/portfolio/templates/portfolio/base.html
+++ b/portfolio/templates/portfolio/base.html
@@ -13,6 +13,8 @@
   <link rel="stylesheet"
         href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
+  <script src="https://unpkg.com/htmx.org@1.9.10"></script>
+
   {% load static %}
   <!-- Local CSS (Whitenoise adds cache-busting automatically) -->
   <link rel="stylesheet" href="{% static 'css/portfolio.css' %}">
